<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_slam_multimap</name>
  <version>1.0.0</version>
<description>A ROS 2 Humble package integrating NeuronBot2 and slam_toolbox for 2D mapping in Gazebo.</description>
  <maintainer email="email@email.com">Xen0n</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
